samples/compiler-tests/fail/undefined_name.ktr
// undefined_name.ktr -- UndefinedName error expected
// Referencing an undefined variable

agent main() -> integer {
  let x = 10
  x + y
}
